--- a/app/src/main/res/layout/fragment_filter_list.xml
+++ b/app/src/main/res/layout/fragment_filter_list.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="200dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FilterListFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:background="#fff">
 
         <ImageView
             android:id="@+id/closeDialog"
+            android:padding="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:src="@drawable/ic_close_black_24dp"
@@ -17,45 +23,44 @@
 
         <Spinner
             android:id="@+id/sortLisField"
-            android:entries="@array/sort_list_field"
-            app:layout_constraintTop_toTopOf="parent"
+            android:entries="@array/filter_list"
+            app:layout_constraintTop_toBottomOf="@+id/closeDialog"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-
         <Spinner
             android:id="@+id/sortListype"
-            android:layout_width="70dp"
+            android:layout_width="150dp"
             android:entries="@array/raneg_type"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toTopOf="@id/sortListButton"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_height="wrap_content" />
 
-       <EditText
-           android:id="@+id/filterValue"
-           android:inputType="number"
-           android:hint="Enter Value"
-           android:layout_marginRight="20dp"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toEndOf="@id/sortListype"
-           app:layout_constraintTop_toTopOf="@id/sortListype"
-           app:layout_constraintBottom_toBottomOf="@id/sortListype"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content" />
-
+        <EditText
+            android:id="@+id/filterValue"
+            android:inputType="number"
+            android:hint="Enter Value"
+            android:layout_marginRight="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/sortListype"
+            app:layout_constraintTop_toTopOf="@id/sortListype"
+            app:layout_constraintBottom_toBottomOf="@id/sortListype"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/sortListButton"
-            android:text="Sort"
+            android:text="Filter"
+            android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-=
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
