--- a/app/src/main/res/layout/fragment_sort_list_fragmeent.xml
+++ b/app/src/main/res/layout/fragment_sort_list_fragmeent.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content" />
 
         <Spinner
-            android:id="@+id/filterListField"
+            android:id="@+id/sortListField"
             android:entries="@array/sort_list_field"
             app:layout_constraintTop_toBottomOf="@+id/closeDialog"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
 
 
         <Spinner
-            android:id="@+id/filterRangeType"
+            android:id="@+id/sortRangeType"
             android:layout_width="match_parent"
             android:entries="@array/sort_list_type"
             android:layout_marginBottom="20dp"
