--- a/app/src/main/res/layout/fragment_filter_list.xml
+++ b/app/src/main/res/layout/fragment_filter_list.xml
@@ -32,17 +32,17 @@
 
         <Spinner
             android:id="@+id/filterRangeType"
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:entries="@array/filter_range_type"
             android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@id/sortListButton"
+            app:layout_constraintBottom_toTopOf="@id/filterListButton"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_height="wrap_content" />
 
         <EditText
             android:id="@+id/filterValue"
             android:inputType="number"
-            android:hint="Enter Value"
+            android:hint="Enter A Number"
             android:layout_marginRight="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/filterRangeType"
